# DecosFacerecognition

./: .doxyconfig  .gitignore  CMakeLists.txt  README.md
benchmark/: detection.cpp
database/: get_database.sh
examples/: database_builder.cpp  database_processor.cpp  recognition_probability.cpp  webcam.cpp
examples/openface_node/: CMakeLists.txt  package.xml
examples/openface_node/src/: main.cpp
examples/openface_tool/: CMakeLists.txt
examples/openface_tool/include/: aligntool.hpp  tool.hpp
examples/openface_tool/src/: aligntool.cpp  main.cpp  tool.cpp
ext/dlib/: CMakeLists.txt
ext/gtest/: CMakeLists.txt
ext/luastate/: CMakeLists.txt
include/core/: image.hpp  rectangle.hpp  support.hpp
include/database/: database.hpp  facedatabase.hpp
include/detection/: facedetector.hpp
include/learning/: facerecognizer.hpp
include/openface/: face.hpp  facealigner.hpp  neuralnetwork.hpp  openface.hpp  settings.hpp  torchinterface.hpp
resources/: get_resources.sh
src/core/: image.cpp
src/database/: database.cpp  facedatabase.cpp
src/detection/: facedetector.cpp
src/learning/: facerecognizer.cpp
src/openface/: face.cpp  facealigner.cpp  forward_nn.lua  neuralnetwork.cpp  openface.cpp
test/: core.cpp  database.cpp  detection.cpp  learning.cpp  openface.cpp  test.lua
